--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'java'
+    id 'com.zeroc.gradle.ice-builder.slice' version '1.4.7'
 }
+
+apply plugin: 'java'
+apply plugin: 'com.zeroc.gradle.ice-builder.slice'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -10,6 +14,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.zeroc:ice:3.7.2'
     testImplementation("io.cucumber:cucumber-java:6.10.2")
 }
 
@@ -28,4 +33,10 @@ task cucumber(type: JavaExec) {
     args = ['--plugin', 'pretty',
             '--glue', 'com.odde.atddv2',
             'src/test/resources']
+}
+
+slice {
+    java {
+        files = [file("./Printer.ice")]
+    }
 }
