--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,26 @@
-plugins {
-    id 'java'
-    id 'com.zeroc.gradle.ice-builder.slice' version '1.4.7'
+buildscript {
+    repositories {
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public"
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.4")
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.10.RELEASE"
+    }
 }
 
+plugins {
+    id 'com.zeroc.gradle.ice-builder.slice' version '1.4.7' apply false
+}
+
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'java'
 apply plugin: 'com.zeroc.gradle.ice-builder.slice'
+apply plugin: 'org.springframework.boot'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -13,11 +29,22 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "com.github.leeonky:java-TD-tools-dependencies:0.0.2"
+    }
+}
+
 dependencies {
     implementation 'com.zeroc:ice:3.7.2'
     testImplementation("io.cucumber:cucumber-java:6.10.2")
+    testImplementation("io.cucumber:cucumber-spring:6.10.2")
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.4.0'
     testImplementation("org.assertj:assertj-core:3.19.0")
+    testImplementation "com.github.leeonky:jfactory"
+    testImplementation "com.github.leeonky:jfactory-cucumber"
+    testImplementation "com.github.leeonky:assertj-DAL"
 }
 
 configurations {
@@ -34,6 +61,7 @@ task cucumber(type: JavaExec) {
     jvmArgs "-Dfile.encoding=UTF-8"
     args = ['--plugin', 'pretty',
             '--glue', 'com.odde.atddv2',
+            '--glue', 'com.github.leeonky',
             'src/test/resources']
 }
 
