--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.4")
         classpath "io.spring.gradle:dependency-management-plugin:1.0.10.RELEASE"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.2.0"
     }
 }
 
@@ -21,6 +22,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'java'
 //apply plugin: 'com.zeroc.gradle.ice-builder.slice'
 apply plugin: 'org.springframework.boot'
+apply plugin: "com.github.johnrengelman.shadow"
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -37,16 +39,25 @@ dependencyManagement {
 
 dependencies {
 //    implementation 'com.zeroc:ice:3.7.2'
-    testImplementation files('libs/Ice.jar')
-    testImplementation("io.cucumber:cucumber-java:6.10.2")
-    testImplementation("io.cucumber:cucumber-spring:6.10.2")
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.4.0'
-    testImplementation("org.assertj:assertj-core:3.19.0")
-    testImplementation "com.github.leeonky:jfactory"
-    testImplementation "com.github.leeonky:jfactory-cucumber"
-    testImplementation "com.github.leeonky:assertj-DAL"
-    testImplementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+    implementation files('libs/Ice.jar')
+    implementation("io.cucumber:cucumber-java:6.10.2")
+    implementation("io.cucumber:cucumber-spring:6.10.2")
+    implementation('org.springframework.boot:spring-boot-starter-test')
+    implementation group: 'org.mockito', name: 'mockito-core', version: '4.4.0'
+    implementation("org.assertj:assertj-core:3.19.0")
+    implementation "com.github.leeonky:jfactory"
+    implementation "com.github.leeonky:jfactory-cucumber"
+    implementation "com.github.leeonky:assertj-DAL"
+    implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.13.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.4'
+    testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.9.0'
+    testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version: '2.9.0'
+
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
+    testCompile('org.projectlombok:lombok:1.18.4')
 }
 
 configurations {
